// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $2.95
  </h1>
</div>
`;

exports[`should have render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totalling 
    $123,123.23
  </h1>
</div>
`;
